# api/ambulance-wl.openapi.yaml
@@ -4,20 +4,22 @@ servers:
     url: /api
 info:
   description: Ambulance Waiting List management for Web-In-Cloud system
-  version: '1.0.0'
+  version: "1.0.0"
   title: Waiting List Api
   contact:
     email: your_email@stuba.sk
   license:
     name: CC BY 4.0
-    url: 'https://creativecommons.org/licenses/by/4.0/'
+    url: "https://creativecommons.org/licenses/by/4.0/"
 tags:
   - name: ambulanceWaitingList
     description: Ambulance Waiting List API
   - name: ambulanceConditions
     description: Patient conditions and symptoms handled in the ambulance
+  - name: ambulances
+    description: Ambulance details
 paths:
-  '/waiting-list/{ambulanceId}/entries':
+  "/waiting-list/{ambulanceId}/entries":
     get:
       tags:
         - ambulanceWaitingList
@@ -32,18 +34,18 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: value of the waiting list entries
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/WaitingListEntry'
+                  $ref: "#/components/schemas/WaitingListEntry"
               examples:
                 response:
-                  $ref: '#/components/examples/WaitingListEntriesExample'
-        '404':
+                  $ref: "#/components/examples/WaitingListEntriesExample"
+        "404":
           description: Ambulance with such ID does not exist
     post:
       tags:
@@ -62,31 +64,31 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/WaitingListEntry'
+              $ref: "#/components/schemas/WaitingListEntry"
             examples:
               request-sample:
-                $ref: '#/components/examples/WaitingListEntryExample'
+                $ref: "#/components/examples/WaitingListEntryExample"
         description: Waiting list entry to store
         required: true
       responses:
-        '200':
+        "200":
           description: >-
             Value of the waiting list entry with re-computed estimated time of
             ambulance entry
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/WaitingListEntry'
+                $ref: "#/components/schemas/WaitingListEntry"
               examples:
                 updated-response:
-                  $ref: '#/components/examples/WaitingListEntryExample'
-        '400':
+                  $ref: "#/components/examples/WaitingListEntryExample"
+        "400":
           description: Missing mandatory properties of input object.
-        '404':
+        "404":
           description: Ambulance with such ID does not exists
-        '409':
+        "409":
           description: Entry with the specified id already exists
-  '/waiting-list/{ambulanceId}/entries/{entryId}':
+  "/waiting-list/{ambulanceId}/entries/{entryId}":
     get:
       tags:
         - ambulanceWaitingList
@@ -109,16 +111,16 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: value of the waiting list entries
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/WaitingListEntry'
+                $ref: "#/components/schemas/WaitingListEntry"
               examples:
                 response:
-                  $ref: '#/components/examples/WaitingListEntryExample'
-        '404':
+                  $ref: "#/components/examples/WaitingListEntryExample"
+        "404":
           description: Ambulance or Entry with such ID does not exists
     put:
       tags:
@@ -143,29 +145,29 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/WaitingListEntry'
+              $ref: "#/components/schemas/WaitingListEntry"
             examples:
               request:
-                $ref: '#/components/examples/WaitingListEntryExample'
+                $ref: "#/components/examples/WaitingListEntryExample"
         description: Waiting list entry to update
         required: true
       responses:
-        '200':
+        "200":
           description: >-
             value of the waiting list entry with re-computed estimated time of
             ambulance entry
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/WaitingListEntry'
+                $ref: "#/components/schemas/WaitingListEntry"
               examples:
                 response:
-                  $ref: '#/components/examples/WaitingListEntryExample'
-        '403':
+                  $ref: "#/components/examples/WaitingListEntryExample"
+        "403":
           description: >-
             Value of the entryID and the data id is mismatching. Details are
             provided in the response body.
-        '404':
+        "404":
           description: Ambulance or Entry with such ID does not exists
     delete:
       tags:
@@ -187,11 +189,11 @@ paths:
           schema:
             type: string
       responses:
-        '204':
+        "204":
           description: Item deleted
-        '404':
+        "404":
           description: Ambulance or Entry with such ID does not exists
-  '/waiting-list/{ambulanceId}/condition':
+  "/waiting-list/{ambulanceId}/condition":
     get:
       tags:
         - ambulanceConditions
@@ -206,19 +208,70 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: value of the predefined conditions
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Condition'
+                  $ref: "#/components/schemas/Condition"
               examples:
                 response:
-                  $ref: '#/components/examples/ConditionsListExample'
-        '404':
+                  $ref: "#/components/examples/ConditionsListExample"
+        "404":
           description: Ambulance with such ID does not exists
+  "/ambulance":
+    post:
+      tags:
+        - ambulances
+      summary: Saves new ambulance definition
+      operationId: createAmbulance
+      description: Use this method to initialize new ambulance in the system
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Ambulance"
+            examples:
+              request-sample:
+                $ref: "#/components/examples/AmbulanceExample"
+        description: Ambulance details to store
+        required: true
+      responses:
+        "200":
+          description: >-
+            Value of stored ambulance
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Ambulance"
+              examples:
+                updated-response:
+                  $ref: "#/components/examples/AmbulanceExample"
+        "400":
+          description: Missing mandatory properties of input object.
+        "409":
+          description: Entry with the specified id already exists
+  "/ambulance/{ambulanceId}":
+    delete:
+      tags:
+        - ambulances
+      summary: Deletes specific ambulance
+      operationId: deleteAmbulance
+      description: Use this method to delete the specific ambulance from the system.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: Item deleted
+        "404":
+          description: Ambulance with such ID does not exist
 components:
   schemas:
     WaitingListEntry:
@@ -240,12 +293,12 @@ components:
         waitingSince:
           type: string
           format: date-time
-          example: '2038-12-24T10:05:00Z'
+          example: "2038-12-24T10:05:00Z"
           description: Timestamp since when the patient entered the waiting list
         estimatedStart:
           type: string
           format: date-time
-          example: '2038-12-24T10:35:00Z'
+          example: "2038-12-24T10:35:00Z"
           description: Estimated time of entering ambulance. Ignored on post.
         estimatedDurationMinutes:
           type: integer
@@ -255,11 +308,11 @@ components:
             Estimated duration of ambulance visit. If not provided then it will
             be computed based on condition and ambulance settings
         condition:
-          $ref: '#/components/schemas/Condition'
+          $ref: "#/components/schemas/Condition"
       example:
-        $ref: '#/components/examples/WaitingListEntryExample'
+        $ref: "#/components/examples/WaitingListEntryExample"
     Condition:
-      description: 'Describes disease, symptoms, or other reasons of patient   visit'
+      description: "Describes disease, symptoms, or other reasons of patient   visit"
       required:
         - value
       properties:
@@ -272,14 +325,39 @@ components:
         reference:
           type: string
           format: url
-          example: 'https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/'
+          example: "https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/"
           description: Link to encyclopedical explanation of the patient's condition
         typicalDurationMinutes:
           type: integer
           format: int32
           example: 20
       example:
-        $ref: '#/components/examples/ConditionExample'
+        $ref: "#/components/examples/ConditionExample"
+    Ambulance:
+      type: object
+      required: ["id", "name", "roomNumber"]
+      properties:
+        id:
+          type: string
+          example: dentist-warenova
+          description: Unique identifier of the ambulance
+        name:
+          type: string
+          example: Zubná ambulancia Dr. Warenová
+          description: Human readable display name of the ambulance
+        roomNumber:
+          type: string
+          example: 356 - 3.posch
+        waitingList:
+          type: array
+          items:
+            $ref: "#/components/schemas/WaitingListEntry"
+        predefinedConditions:
+          type: array
+          items:
+            $ref: "#/components/schemas/Condition"
+      example:
+        $ref: "#/components/examples/AmbulanceExample"
   examples:
     WaitingListEntryExample:
       summary: Ľudomír Zlostný waiting
@@ -290,13 +368,13 @@ components:
         id: x321ab3
         name: Ľudomír Zlostný
         patientId: 74895-ludomir-zlostny
-        waitingSince: '2038-12-24T10:05:00.000Z'
-        estimatedStart: '2038-12-24T10:35:00.000Z'
+        waitingSince: "2038-12-24T10:05:00.000Z"
+        estimatedStart: "2038-12-24T10:35:00.000Z"
         estimatedDurationMinutes: 15
         condition:
           value: Nevoľnosť
           code: nausea
-          reference: 'https://zdravoteka.sk/priznaky/nevolnost/'
+          reference: "https://zdravoteka.sk/priznaky/nevolnost/"
     ConditionExample:
       summary: Conditions and symptoms
       description: list of few symptoms that can be chosen by patients
@@ -312,11 +390,11 @@ components:
       value:
         - value: Teploty
           code: subfebrilia
-          reference: 'https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/'
+          reference: "https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/"
           typicalDurationMinutes: 20
         - value: Nevoľnosť
           code: nausea
-          reference: 'https://zdravoteka.sk/priznaky/nevolnost/'
+          reference: "https://zdravoteka.sk/priznaky/nevolnost/"
           typicalDurationMinutes: 45
         - value: Kontrola
           code: followup
@@ -335,20 +413,67 @@ components:
         - id: x321ab3
           name: Jožko Púčik
           patientId: 460527-jozef-pucik
-          waitingSince: '2038-12-24T10:05:00.000Z'
-          estimatedStart: '2038-12-24T10:35:00.000Z'
+          waitingSince: "2038-12-24T10:05:00.000Z"
+          estimatedStart: "2038-12-24T10:35:00.000Z"
           estimatedDurationMinutes: 15
           condition:
             value: Teploty
             code: subfebrilia
-            reference: 'https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/'
+            reference: "https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/"
         - id: x321ab4
           name: Ferdinand Trety
           patientId: 780907-ferdinand-tre
-          waitingSince: '2038-12-24T10:25:00.000Z'
-          estimatedStart: '2038-12-24T10:50:00.000Z'
+          waitingSince: "2038-12-24T10:25:00.000Z"
+          estimatedStart: "2038-12-24T10:50:00.000Z"
           estimatedDurationMinutes: 25
           condition:
             value: Nevoľnosť
             code: nausea
-            reference: 'https://zdravoteka.sk/priznaky/nevolnost/'
+            reference: "https://zdravoteka.sk/priznaky/nevolnost/"
+    AmbulanceExample:
+      summary: Sample GP ambulance
+      description: |
+        Example of GP ambulance with waiting list and predefined conditions
+      value:
+        id: gp-warenova
+        name: Ambulancia všeobecného lekárstva Dr. Warenová
+        roomNumber: 356 - 3.posch
+        waitingList:
+          - id: x321ab3
+            name: Jožko Púčik
+            patientId: 460527-jozef-pucik
+            waitingSince: "2038-12-24T10:05:00.000Z"
+            estimatedStart: "2038-12-24T10:35:00.000Z"
+            estimatedDurationMinutes: 15
+            condition:
+            value: Teploty
+            code: subfebrilia
+            reference: "https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/"
+          - id: x321ab4
+            name: Ferdinand Trety
+            patientId: 780907-ferdinand-tre
+            waitingSince: "2038-12-24T10:25:00.000Z"
+            estimatedStart: "2038-12-24T10:50:00.000Z"
+            estimatedDurationMinutes: 25
+            condition:
+            value: Nevoľnosť
+            code: nausea
+            reference: "https://zdravoteka.sk/priznaky/nevolnost/"
+        predefinedConditions:
+          - value: Teploty
+            code: subfebrilia
+            reference: "https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/"
+            typicalDurationMinutes: 20
+          - value: Nevoľnosť
+            code: nausea
+            reference: "https://zdravoteka.sk/priznaky/nevolnost/"
+            typicalDurationMinutes: 45
+          - value: Kontrola
+            code: followup
+            typicalDurationMinutes: 15
+          - value: Administratívny úkon
+            code: administration
+            typicalDurationMinutes: 10
+          - value: Odber krvi
+            code: blood-test
+            typicalDurationMinutes: 10
